@@ -1,4 +1,7 @@
-# This Build.PL for RDF-aREF was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
+# This Build.PL for RDF-aREF was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.007.
+use strict;
+use warnings;
+
 use v5.12.0;
-use Module::Build::Tiny 0.037;
+use Module::Build::Tiny 0.038;
 Build_PL();
