@@ -2,6 +2,7 @@
 
 {{$NEXT}}
   - better support RDF::Trine in Encoder
+  - introduced RDF::aREF::Query (experimental)
 
 0.14  2014-10-02 14:14:09 CEST
   - adjust with aREF 0.19
